--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
     container:
       image: jcxldn/openjdk-alpine:${{matrix.version}}-jdk
     steps:
+    - name: Install git
+      run: apk add --no-cache git
     - uses: actions/checkout@v2
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
