--- a/src/main/resources/language.yml
+++ b/src/main/resources/language.yml
@@ -49,5 +49,5 @@ title:
 
 misc:
   kit gui title: "Select a kit"
-  quit game item: "&cQuit game"
-  select kit item: "&dSelect kit"
+  quit game item: "&c&lQuit game"
+  select kit item: "&d&lSelect kit"
