--- a/src/main/resources/language.yml
+++ b/src/main/resources/language.yml
@@ -51,3 +51,7 @@ misc:
   kit gui title: "Select a kit"
   quit game item: "&c&lQuit game"
   select kit item: "&d&lSelect kit"
+
+voxelsniper:
+  disabled: "&eVoxelSniper has been disabled for you while in-game!"
+  enabled: "&eVoxelSniper has been re-enabled for you!"
