VoxelSniper + WorldEdit integration (#28)
* Initial PoC of non-cancellable TributeAddEvent.kt

* Clean up event calling code block

* Clean up removeEvent class; add addEvent

* Remove debug listener handlers

* Remove unused debug imports

* Add VoxelSniper Jar using ivy and github releases

* Create GameTriggersListener.kt PoC for VoxelSniper enable/disable using custom events

* Use kotlin shorthand for initial event checks

* rename github releases ivy repo

* Actually fix merge conflicts

* Add message config support for VoxelSniper enable/disable

* Initial PoC for unbinding the worldedit wand when in-game

* Improve comments

* Move debug logging to console

* Misc logging adjustments

* (GameTriggers) Adjust config to use the same translations for both plugins

* Add PlayerCommandPreprocessEvent to intercept and cancel WorldEdit commands when in-game

* Adjust logging in GameTriggersListener

* Update old logger call, import Player

* Adjust inaccurate comment

* Address initial review changes

* Fix boolean set

* (gVPM): Lift return out of if

--- a/src/main/resources/language.yml
+++ b/src/main/resources/language.yml
@@ -51,3 +51,7 @@ misc:
   kit gui title: "Select a kit"
   quit game item: "&c&lQuit game"
   select kit item: "&d&lSelect kit"
+
+external:
+  feature disabled: "&e%s has been disabled for you while in-game!"
+  feature enabled: "&e%s has been re-enabled for you!"
